inputs placeholders y required

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="grupo__fecha1">
                 <label for="fecha1" class="formulario__label">Fecha de Inicio:</label>
                 <div>
-                    <input type="date" class="formulario__input" name="fecha1" id="fecha1" value="2022-02-01" min="2020-07-01" max="2023-03-16">
+                    <input type="date" class="formulario__input" name="fecha1" id="fecha1" value="2022-02-01" min="2020-07-01" max="2023-03-16" placeholder="Ingrese fecha de inicio" required>
                 </div>
             </div>
 
@@ -34,7 +34,7 @@
             <div id="grupo__precio1">
                 <label for="precio1" class="formulario__label">Precio Convenido:</label>
                 <div>
-                    <input type="number" class="formulario__input" name="precio1" id="precio1" placeholder="Solo números. Ej: 10000">
+                    <input type="number" class="formulario__input" name="precio1" id="precio1" placeholder="Solo números. Ej: 10000" required>
                 </div>
             </div>
 
@@ -42,7 +42,7 @@
             <div id="grupo__fecha2">
                 <label for="fecha2" class="formulario__label">Fecha de Actualización:</label>
                 <div>
-                    <input type="date" class="formulario__input" name="fecha2" id="fecha2" value="2023-02-01" min="2020-07-01" max="2023-03-16">
+                    <input type="date" class="formulario__input" name="fecha2" id="fecha2" value="2023-02-01" min="2020-07-01" max="2023-03-16" placeholder="Ingrese fecha renovación" required>
                 </div>
             </div>
 
