--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-
-
     <title>Calculadora de Alquileres</title>
 </head>
 
 <body>
     <main>
-
         <h1>
             Calculadora de Alquileres
         </h1>
@@ -27,7 +23,7 @@
             </div>
             
             <div>
-                <label for="dia1" class="formulario__label">Día</label>
+                <!-- <label for="dia1" class="formulario__label">Día</label> -->
                 <select class="formulario__input" name="dia1" id="dia1">
                     <option value="" selected>Día</option>
                     <option value="01">01</option>
@@ -64,7 +60,7 @@
                 </select>
             </div>
             <div>
-                <label for="mes1" class="formulario__label">Mes</label>
+                <!-- <label for="mes1" class="formulario__label">Mes</label> -->
                 <select class="formulario__input" name="mes1" id="mes1">
                     <option value="1" selected>Mes</option>
                     <option value="01">Enero</option>
@@ -82,7 +78,7 @@
                 </select>
             </div>
             <div>
-                <label for="anio1" class="formulario__label">Año</label>
+                <!-- <label for="anio1" class="formulario__label">Año</label> -->
                 <select class="formulario__input" name="anio1" id="anio1">
                     <option value="1" selected>Año</option>
                     <option value="2020">2020</option>
@@ -100,7 +96,7 @@
             <div class="select-precio1">
                 <div>
                     <input type="number" class="formulario__input" name="precio1" id="precio1"
-                        placeholder="Ej: 10000">
+                        placeholder="11500">
                 </div>
             </div>
         
@@ -109,7 +105,7 @@
             </div>
             <!-- Grupo: fecha2 -->
             <div>
-                <label for="dia2" class="formulario__label">Día</label>
+                <!-- <label for="dia2" class="formulario__label">Día</label> -->
                 <select class="formulario__input" name="dia2" id="dia2">
                     <option value="1" selected>Día</option>
                     <option value="01">01</option>
@@ -146,9 +142,9 @@
                 </select>
             </div>
             <div>
-                <label for="mes2" class="formulario__label">Mes</label>
+                <!-- <label for="mes2" class="formulario__label">Mes</label> -->
                 <select class="formulario__input" name="mes2" id="mes2">
-                    <option value="1" selected>mes</option>
+                    <option value="1" selected>Mes</option>
                     <option value="01">Enero</option>
                     <option value="02">Febrero</option>
                     <option value="03">Marzo</option>
@@ -164,7 +160,7 @@
                 </select>
             </div>
             <div>
-                <label for="anio2" class="formulario__label">Año</label>
+                <!-- <label for="anio2" class="formulario__label">Año</label> -->
                 <select class="formulario__input" name="anio2" id="anio2">
                     <option value="1" selected>Año</option>
                     <option value="2020">2020</option>
