Agregado el límite de fechas y el porcentual del incremento.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
                     <option value="2021">2021</option>
                     <option value="2022">2022</option>
                     <option value="2023">2023</option>
-                </select>
+                </select> 
             </div>
+            <p class="fechas">La fecha de inicio no puede ser anterior al 01-07-2020</p>
 
             <div class="campo" >
                 <p>Precio Convenido</p>
@@ -162,7 +163,8 @@
                     <option value="2023">2023</option>
                 </select>
             </div>
-
+            <p class="fechas">La fecha de renovación no puede ser posterior al 16-03-2023 ya que es la última actualización publicada por el BCRA.</p>
+            
             <div class="formulario__grupo-btn-calcular">
                 <button type="button" onclick="obtenerDatos()" class="formulario__btn">Calcular</button>
                 <p id="formulario__mensaje-precio2"></p>
