--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <option value="2021">2021</option>
                     <option value="2022">2022</option>
                     <option value="2023">2023</option>
+                    <option value="2024">2024</option>
                 </select> 
             </div>
             <p class="fechas">La fecha de inicio no puede ser anterior al 01-07-2020</p>
@@ -161,9 +162,10 @@
                     <option value="2021">2021</option>
                     <option value="2022">2022</option>
                     <option value="2023">2023</option>
+                    <option value="2024">2024</option>
                 </select>
             </div>
-            <p class="fechas">La fecha de renovación no puede ser posterior al 16-12-2023 ya que es la última actualización publicada por el BCRA.</p>
+            <p class="fechas">La fecha de renovación no puede ser posterior al 16-01-2024 ya que es la última actualización publicada por el BCRA.</p>
             
             <div class="formulario__grupo-btn-calcular">
                 <button type="button" onclick="obtenerDatos()" class="formulario__btn">Calcular</button>
