actualizar al 16 de Mayo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div>
                 <select class="formulario__input" name="mes1" id="mes1" required>
-                    <option value="1" selected>Mes</option>
+                    <option value="1">Mes</option>
                     <option value="01" selected>Enero</option>
                     <option value="02">Febrero</option>
                     <option value="03">Marzo</option>
@@ -144,8 +144,8 @@
                     <option value="01">Enero</option>
                     <option value="02">Febrero</option>
                     <option value="03">Marzo</option>
-                    <option value="04" selected>Abril</option>
-                    <option value="05">Mayo</option>
+                    <option value="04">Abril</option>
+                    <option value="05" selected>Mayo</option>
                     <option value="06">Junio</option>
                     <option value="07">Julio</option>
                     <option value="08">Agosto</option>
@@ -165,7 +165,7 @@
                     <option value="2024" selected>2024</option>
                 </select>
             </div>
-            <p class="fechas">La fecha de renovación no puede ser posterior al 16-04-2024 ya que es la última actualización publicada por el BCRA.</p>
+            <p class="fechas">La fecha de renovación no puede ser posterior al 16-05-2024 ya que es la última actualización publicada por el BCRA.</p>
             
             <div class="formulario__grupo-btn-calcular">
                 <button type="button" onclick="obtenerDatos()" class="formulario__btn">Calcular</button>
